[metadata]
name = napari-cellplato
version = 0.0.1
author = MichaelShannon
author_email = mjs2399@cumc.columbia.edu
url = https://github.com/Michael-shannon/napari-cellplato
license = MIT
description = l plasticity over time
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/Michael-shannon/napari-cellplato/issues
    Documentation = https://github.com/Michael-shannon/napari-cellplato#README.md
    Source Code = https://github.com/Michael-shannon/napari-cellplato
    User Support = https://github.com/Michael-shannon/napari-cellplato/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-cellplato = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-cellplato = napari_cellplato:napari.yaml
